# lx-django-template

./: .devenv.flake.nix  .gitignore  LICENSE  README.md  devenv.nix  devenv.yaml  devlog.md  django-settings.json  gpu-check.py  hello.py  lx-webapp.env-example  manage.py  pyproject.toml
devenv/processes/: default.nix
devenv/scripts/: default.nix  django.nix
devenv/tasks/: default.nix  endoreg-db.nix
lx_webapp/: asgi.py  base_settings.py  settings.py  urls.py  wsgi.py
lx_webapp/settings_dev/: __init__.py
lx_webapp/settings_prod/: __init__.py
