[project]
name = "lx_webapp"
version = "0.1.0"
description = "This package is made to censor sensitive data in images and extract the contents. NER is planned for the future."
authors = ["lux_t1@ukw.de"]
license = "MIT"
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
    "numpy>=2.1.3",
    "spacy>=3.4.2",
    "spacy-lookups-data>=1.0.0",
    "gender-guesser == 0.4.0",
    "gensim==4.3.0",
    "pytesseract==0.3.13",
    "imutils == 0.5.4",
    "pytorch-revgrad == 0.2.0",
    "flair==0.13.1",
    "transformers==4.43.0",
    "PyMuPDF == 1.23.26",
    "tokenizers == 0.19.1",
    "hatchling == 1.24.2",
    "ftfy == 6.2.0",
    "setuptools == 69.5.1",
    "safetensors == 0.4.3",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "torchaudio==2.3.0",
    "maturin == 1.5.1",
    "gdown == 5.2.0",
    "setuptools-rust == 1.9.0",
    "opencv-python>=4.10.0.84",
    "scipy>=1.14.1",
    "pillow>=11.0.0",
    "endoreg-db>=0.5.3",
    "daphne>=4.1.2",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.8.2",
]


[tool.setuptools]
packages = ["lx_webapp"]

